// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile component should render 1`] = `
<DocumentFragment>
  <div
    class="tile tile-gradient"
    style="--tile-background: #00639a; width: 100%;"
  >
    <div
      aria-hidden="true"
      class="tile__background-image"
    >
      test-file-stub
    </div>
    <a
      class="tile__main-content"
      href="/"
    >
      <span>
        <h3
          class="tile__header"
        >
          Tile title
        </h3>
        <h4
          class="tile__subtitle"
        >
          Subtitle
        </h4>
      </span>
    </a>
    <small
      class="tile__description"
    >
      My description
    </small>
  </div>
</DocumentFragment>
`;

exports[`Tile component should render with default specified width 1`] = `
<DocumentFragment>
  <div
    class="tile"
    style="width: 20rem;"
  >
    <div
      aria-hidden="true"
      class="tile__background-image"
    />
    <a
      class="tile__main-content"
      href="/"
    >
      <span>
        <h3
          class="tile__header"
        >
          Tile title
        </h3>
      </span>
    </a>
  </div>
</DocumentFragment>
`;
